; ModuleID = '/home/carl/AnghaBench/sqlcipher/tool/extr_showshm.c_main.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/tool/extr_showshm.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"Usage: %s FILENAME\0A\00", align 1
@O_RDONLY = common dso_local global i32 0, align 4
@fd = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [19 x i8] c"%s: can't open %s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i8*, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %7 = load i32, i32* %4, align 4
  %8 = icmp slt i32 %7, 2
  br i1 %8, label %9, label %16

9:                                                ; preds = %2
  %10 = load i32, i32* @stderr, align 4
  %11 = load i8**, i8*** %5, align 8
  %12 = getelementptr inbounds i8*, i8** %11, i64 0
  %13 = load i8*, i8** %12, align 8
  %14 = call i32 (i32, i8*, i8*, ...) @fprintf(i32 %10, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i8* %13)
  %15 = call i32 @exit(i32 1) #3
  unreachable

16:                                               ; preds = %2
  %17 = load i8**, i8*** %5, align 8
  %18 = getelementptr inbounds i8*, i8** %17, i64 1
  %19 = load i8*, i8** %18, align 8
  %20 = load i32, i32* @O_RDONLY, align 4
  %21 = call i64 @open(i8* %19, i32 %20)
  store i64 %21, i64* @fd, align 8
  %22 = load i64, i64* @fd, align 8
  %23 = icmp slt i64 %22, 0
  br i1 %23, label %24, label %34

24:                                               ; preds = %16
  %25 = load i32, i32* @stderr, align 4
  %26 = load i8**, i8*** %5, align 8
  %27 = getelementptr inbounds i8*, i8** %26, i64 0
  %28 = load i8*, i8** %27, align 8
  %29 = load i8**, i8*** %5, align 8
  %30 = getelementptr inbounds i8*, i8** %29, i64 1
  %31 = load i8*, i8** %30, align 8
  %32 = call i32 (i32, i8*, i8*, ...) @fprintf(i32 %25, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0), i8* %28, i8* %31)
  %33 = call i32 @exit(i32 1) #3
  unreachable

34:                                               ; preds = %16
  %35 = call i8* @getContent(i32 0, i32 136)
  store i8* %35, i8** %6, align 8
  %36 = load i8*, i8** %6, align 8
  %37 = call i32 @print_index_hdr(i8* %36, i32 0)
  %38 = load i8*, i8** %6, align 8
  %39 = call i32 @print_index_hdr(i8* %38, i32 1)
  %40 = load i8*, i8** %6, align 8
  %41 = call i32 @print_ckpt_info(i8* %40)
  %42 = load i8*, i8** %6, align 8
  %43 = call i32 @free(i8* %42)
  %44 = load i64, i64* @fd, align 8
  %45 = call i32 @close(i64 %44)
  ret i32 0
}

declare dso_local i32 @fprintf(i32, i8*, i8*, ...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i64 @open(i8*, i32) #1

declare dso_local i8* @getContent(i32, i32) #1

declare dso_local i32 @print_index_hdr(i8*, i32) #1

declare dso_local i32 @print_ckpt_info(i8*) #1

declare dso_local i32 @free(i8*) #1

declare dso_local i32 @close(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
